v1/qcl/monomorphizer/extension/mast.hh

    //
    // Type Spec Node Infos:
    //

    struct GlobalIdTypeSpecNodeInfo {
        GDefID def_id;
    };
    struct LocalIdTypeSpecNodeInfo {
        intern::IntStr int_str_id;
    };
    struct PtrTypeSpecNodeInfo {
        mast::TypeSpecID ptd_ts;
        bool contents_is_mut;
    };
    struct ArrayTypeSpecNodeInfo {
        mast::TypeSpecID ptd_ts;
        mast::ExpID count_exp;
        bool contents_is_mut;
    };
    struct SliceTypeSpecNodeInfo {
        mast::TypeSpecID ptd_ts;
        bool contents_is_mut;
    };
    struct FuncSgnTypeSpecNodeInfo {
        mast::TypeSpecID arg_ts;
        mast::TypeSpecID ret_ts;
        SES ret_ses;
    };
    struct TupleTypeSpecNodeInfo {
        mast::TypeSpecID* elem_ts_array;
        size_t elem_ts_count;
    };
    struct GetPolyModuleFieldTypeSpecNodeInfo {
        size_t actual_arg_count;
        mast::NodeID* actual_arg_array;
        PolyModID template_id;
        size_t ts_field_index;
    };
    struct GetMonoModuleFieldTypeSpecNodeInfo {
        MonoModID template_id;
        size_t ts_field_index;
    };
    //
    // Expression Node Infos:
    //

    struct IntExpNodeInfo {
        size_t mantissa;
        IntegerSuffix suffix;
        int is_neg;
    };
    struct FloatExpNodeInfo {
        double value;
        FloatSuffix suffix;
    };
    struct StringExpNodeInfo {
        int* code_point_array;
        size_t code_point_count;
    };
    struct GlobalIdExpNodeInfo {
        GDefID def_id;
    };
    struct LocalIdExpNodeInfo {
        intern::IntStr int_str_id;
    };
    struct TupleExpNodeInfo {
        size_t item_count;
        mast::ExpID* item_array;
    };
    struct FuncCallExpNodeInfo {
        mast::ExpID called_fn;
        mast::ExpID arg_exp_id;
        int call_is_non_tot;
    };
    struct UnaryOpExpNodeInfo {
        mast::ExpID arg_exp;
        UnaryOp unary_op;
    };
    struct BinaryOpExpNodeInfo {
        mast::ExpID lt_arg_exp;
        mast::ExpID rt_arg_exp;
        BinaryOp binary_op;
    };
    struct IfThenElseExpNodeInfo {
        mast::ExpID cond_exp;
        mast::ExpID then_exp;
        mast::ExpID else_exp;
    };
    struct GetTupleFieldExpNodeInfo {
        mast::ExpID tuple_exp_id;
        size_t index;
    };
    struct LambdaExpNodeInfo {
        uint32_t arg_name_count;
        uint32_t ctx_enclosed_name_count;
        intern::IntStr* arg_name_array;
        intern::IntStr* ctx_enclosed_name_array;
        mast::ExpID body_exp;
    };
    struct AllocateOneExpNodeInfo {
        mast::ExpID stored_val_exp_id;
        AllocationTarget allocation_target;
        bool allocation_is_mut;
    };
    struct AllocateManyExpNodeInfo {
        mast::ExpID initializer_stored_val_exp_id;
        mast::ExpID alloc_count_exp;
        AllocationTarget allocation_target;
        bool allocation_is_mut;
    };
    struct ChainExpNodeInfo {
        mast::ElemID* prefix_elem_array;
        size_t prefix_elem_count;
        mast::ExpID ret_exp_id;
    };
    struct GetPolyModuleFieldExpNodeInfo {
        size_t arg_count;
        mast::NodeID* arg_array;
        PolyModID template_id;
        size_t field_index;
    };
    struct GetMonoModuleFieldExpNodeInfo {
        MonoModID template_id;
        size_t field_index;
    };
    struct CastExpNodeInfo {
        TypeSpecID ts_id;
        ExpID exp_id;
    };
    //
    // Element Node Info
    //

    struct Bind1VElemNodeInfo {
        intern::IntStr bound_id;
        mast::ExpID init_exp_id;
    };
    struct Bind1TElemNodeInfo {
        intern::IntStr bound_id;
        mast::TypeSpecID init_ts_id;
    };
    
    struct DoElemNodeInfo {
        mast::ExpID eval_exp_id;
    };
    //
    //
    // Union of all NodeInfo:
    //
    //

    union NodeInfo {
        // type-specs:
        GlobalIdTypeSpecNodeInfo ts_gid;
        LocalIdTypeSpecNodeInfo ts_lid;
        PtrTypeSpecNodeInfo ts_ptr;
        ArrayTypeSpecNodeInfo ts_array;
        SliceTypeSpecNodeInfo ts_slice;
        FuncSgnTypeSpecNodeInfo ts_func_sgn;
        TupleTypeSpecNodeInfo ts_tuple;
        GetMonoModuleFieldTypeSpecNodeInfo ts_get_mono_module_field;
        GetPolyModuleFieldTypeSpecNodeInfo ts_get_poly_module_field;

        // expressions:
        IntExpNodeInfo exp_int;
        FloatExpNodeInfo exp_float;
        StringExpNodeInfo exp_str;
        GlobalIdExpNodeInfo exp_gid;
        LocalIdExpNodeInfo exp_lid;
        TupleExpNodeInfo exp_tuple;
        FuncCallExpNodeInfo exp_call;
        UnaryOpExpNodeInfo exp_unary;
        BinaryOpExpNodeInfo exp_binary;
        IfThenElseExpNodeInfo exp_if_then_else;
        GetTupleFieldExpNodeInfo exp_get_tuple_field;
        LambdaExpNodeInfo exp_lambda;
        AllocateOneExpNodeInfo exp_allocate_one;
        AllocateManyExpNodeInfo exp_allocate_many;
        ChainExpNodeInfo exp_chain;
        GetMonoModuleFieldExpNodeInfo exp_get_mono_module_field;
        GetPolyModuleFieldExpNodeInfo exp_get_poly_module_field;
        CastExpNodeInfo exp_cast;

        // elements:
        Bind1VElemNodeInfo elem_bind1v;
        Bind1TElemNodeInfo elem_bind1t;
        DoElemNodeInfo elem_do;
    };
    //
    // Managing nodes:
    //

    void ensure_mast_init();
    void drop_mast();
    mast::TypeSpecID new_gid_ts(GDefID def_id, size_t node_index);
    mast::TypeSpecID new_lid_ts(intern::IntStr int_str_id, size_t node_index);
    mast::TypeSpecID new_ptr_ts(
        mast::TypeSpecID ptd_ts,
        bool contents_is_mut,
        size_t node_index
    );
    mast::TypeSpecID new_array_ts(
        mast::TypeSpecID ptd_ts,
        mast::ExpID count_exp,
        bool contents_is_mut,
        size_t node_index
    );
    mast::TypeSpecID new_slice_ts(
        mast::TypeSpecID ptd_ts,
        bool contents_is_mut,
        size_t node_index
    );
    mast::TypeSpecID new_func_sgn_ts(
        mast::TypeSpecID arg_ts,
        mast::TypeSpecID ret_ts,
        SES ret_ses,
        size_t node_index
    );
    mast::TypeSpecID new_tuple_ts(
        size_t elem_ts_count,
        mast::TypeSpecID* mv_elem_ts_array,
        size_t node_index
    );
    mast::TypeSpecID new_get_mono_module_field_ts(
        MonoModID mono_mod_id,
        size_t ts_field_ix,
        size_t node_index
    );
    mast::TypeSpecID new_get_poly_module_field_ts(
        PolyModID poly_mod_id,
        size_t ts_field_ix,
        size_t actual_arg_count,
        mast::NodeID* actual_arg_array,
        size_t node_index
    );
    mast::ExpID new_int_exp(size_t mantissa, IntegerSuffix int_typing_suffix, bool is_neg, size_t node_index);
    mast::ExpID new_float_exp(double value, FloatSuffix float_typing_suffix, size_t node_index);
    mast::ExpID new_string_exp(size_t code_point_count, int* code_point_array, size_t node_index);
    mast::ExpID new_gid_exp(GDefID def_id, size_t node_index);
    mast::ExpID new_lid_exp(intern::IntStr int_str_id, size_t node_index);
    mast::ExpID new_func_call_exp(
        mast::ExpID called_fn,
        mast::ExpID arg_exp,
        bool call_is_non_tot,
        size_t node_index
    );
    mast::ExpID new_tuple_exp(
        size_t tuple_item_count,
        mast::ExpID* mv_tuple_item_array,
        size_t node_index
    );
    mast::ExpID new_unary_op_exp(
        UnaryOp unary_op,
        mast::ExpID arg_exp,
        size_t node_index
    );
    mast::ExpID new_binary_op_exp(
        BinaryOp binary_op,
        mast::ExpID lt_arg_exp,
        mast::ExpID rt_arg_exp,
        size_t node_index
    );
    mast::ExpID new_if_then_else_exp(
        mast::ExpID cond_exp,
        mast::ExpID then_exp,
        mast::ExpID else_exp,
        size_t node_index
    );
    mast::ExpID new_get_tuple_field_by_index_exp(
        mast::ExpID tuple_exp_id,
        size_t index,
        size_t node_index
    );
    mast::ExpID new_lambda_exp(
        uint32_t arg_name_count,
        intern::IntStr* arg_name_array,
        uint32_t ctx_enclosed_item_count,
        intern::IntStr* ctx_enclosed_name_array,
        mast::ExpID body_exp_id,
        size_t node_index
    );
    mast::ExpID new_allocate_one_exp(
        mast::ExpID stored_val_exp_id,
        AllocationTarget allocation_target,
        bool allocation_is_mut,
        size_t node_index
    );
    mast::ExpID new_allocate_many_exp(
        mast::ExpID initializer_stored_val_exp_id,
        mast::ExpID alloc_count_exp,
        AllocationTarget allocation_target,
        bool allocation_is_mut,
        size_t node_index
    );
    mast::ExpID new_chain_exp(
        size_t prefix_elem_id_count,
        mast::ElemID* mv_prefix_elem_id_array,
        mast::ExpID ret_exp_id,
        size_t node_index
    );
    mast::ExpID new_get_mono_module_field_exp(
        MonoModID mono_mod_id,
        size_t exp_field_ix,
        size_t node_index
    );
    mast::ExpID new_get_poly_module_field_exp(
        PolyModID poly_mod_id,
        size_t exp_field_ix,
        size_t actual_arg_count,
        mast::NodeID* actual_arg_array,
        size_t node_index
    );
    mast::ExpID new_cast_exp(
        mast::TypeSpecID ts_id,
        mast::ExpID exp_id,
        size_t node_index
    );
    // Element creation methods:
    mast::ElemID new_bind1v_elem(
        intern::IntStr bound_id,
        mast::ExpID init_exp_id,
        size_t node_index
    );
    mast::ElemID new_bind1t_elem(
        intern::IntStr bound_id,
        mast::TypeSpecID init_ts_id,
        size_t node_index
    );
    mast::ElemID new_do_elem(
        mast::ExpID eval_exp_id,
        size_t node_index
    );
    //
    // Data Accessors:
    //

    NodeKind get_node_kind(mast::NodeID node_id);
    NodeInfo* get_info_ptr(mast::NodeID node_id);
    bool is_node_exp_not_ts(mast::NodeID node_id);