qcl/monomorphizer/extension/mtype.hh

    void ensure_mtype_init();
    TID get_unit_tid();
    TID get_u1_tid();
    TID get_u8_tid();
    TID get_u16_tid();
    TID get_u32_tid();
    TID get_u64_tid();
    TID get_s8_tid();
    TID get_s16_tid();
    TID get_s32_tid();
    TID get_s64_tid();
    TID get_f32_tid();
    TID get_f64_tid();
    TID get_string_tid();
    TID get_tuple_tid(
        arg_list::ArgListID arg_list_id
    );
    TID get_ptr_tid(
        TID ptd_tid, 
        bool contents_is_mut
    );
    TID get_array_tid(
        TID ptd_tid, 
        mval::ValueID count_val_id, 
        bool contents_is_mut
    );
    TID get_slice_tid(
        TID ptd_tid, 
        bool contents_is_mut
    );
    TID get_function_tid(
        TID arg_tid, 
        TID ret_tid, 
        SES ses
    );